--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Here are the beautiful temples around the world." />
   <meta name="author" content="Sunday Prince Augustine" />
