--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -7,6 +7,11 @@
   <meta name="author" content="Sunday Prince Augustine" />
   <title>Temple Album</title>
 
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
+
   <!-- External CSS -->
   <link rel="stylesheet" href="styles/temples.css" />
   <link rel="stylesheet" href="styles/temples-large.css" />
@@ -138,7 +143,7 @@
     document.getElementById("currentyear").textContent = new Date().getFullYear();
     document.getElementById("lastModified").textContent = document.lastModified;
 
-    // Optional image load effect
+    // Lazy load effect
     document.querySelectorAll('img[loading="lazy"]').forEach(img => {
       img.addEventListener('load', () => {
         img.classList.add('loaded');
