"Update Filtered Temples Page"

--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -13,8 +13,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
 
   <!-- External CSS -->
-  <link rel="stylesheet" href="styles/temples.css" />
-  <link rel="stylesheet" href="styles/temples-large.css" />
+  <link rel="stylesheet" href="styles/temples.css">
+  <link rel="stylesheet" href="styles/temples-large.css">
 
   <!-- JavaScript -->
   <script defer src="scripts/temples.js"></script>
