--- a/week-05/project/form.html
+++ b/week-05/project/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Product Review Form Project.">
-    <meta name="author" content="Gertrude Njideka Nwabuikwu-Chori">
+    <meta name="author" content="Sunday Prince Augustine">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
@@ -92,8 +92,8 @@
     </main>
 
     <footer>
-        <p>&copy; <span id="currentyear"></span> 2025 - Ladybird Global Collections</p>
-        <p>Zone 8, Ekeoha Shopping Center, Aba, Abia State</p>
+        <p>&copy; <span id="currentyear"></span>2025 - Sunday Prince Global Access ! @
+            Ikot Asurua, Shopping Base, Ikot Ekpene, Akwa Ibom, Nigeria</p>
         <p>Last Modified: <span id="lastModified"></span></p>
     </footer>
 
