--- a/week-05/project/siteplan.html
+++ b/week-05/project/siteplan.html
@@ -20,15 +20,15 @@
 
 <body>
     <header>
-        <img src="../images/ladybird-logo.webp" alt="Sunday Prince Global Access Logo">
-        <button id="menu-toggle" aria-label="Toggle Menu">☰</button>
+        <img src="images/Logo.png" alt="Sunday Prince Global Access Logo">
+        <button id="menu-toggle" aria-label="Toggle Menu">
         <nav>
             <ul class="nav-menu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#shop">Shop</a></li>
-                <li><a href="#contact">Contact Us</a></li>
-                <li><a href="#account">My Account</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#account">MyAccount</a></li>
             </ul>
         </nav>
     </header>
@@ -150,9 +150,9 @@
         </form>
     </section>
     <div class="hero">
-        <img src="images/ladybird global home page mobile view-.webp" alt="mockup" width="500" height="785">
+        <img src="images/Sunday_Prince_global_home_page_mobile_view.webp" alt="mockup" width="500" height="785">
 
-        <img src="images/ladybird_global_home_page.webp" alt="Sunday Prince Global Access Site Mockup" width="500"
+        <img src="images/Sunday_Prince_global_home_page.webp" alt="Sunday Prince Global Access Site Mockup" width="500"
             height="706">
     </div>
 
