--- a/week05/project/siteplan.html
+++ b/week05/project/siteplan.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sunday Prince Global Access - Site Plan</title>
+    <title>Ladybird Global Collections - Site Plan</title>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,22 +20,22 @@
 
 <body>
     <header>
-        <img src="images/Logo.png" alt="Sunday Prince Global Access Logo">
-        <button id="menu-toggle" aria-label="Toggle Menu">
+        <img src="images/Logo.png" alt="Ladybird Global Collections Logo">
+        <button id="menu-toggle" aria-label="Toggle Menu">☰</button>
         <nav>
             <ul class="nav-menu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#shop">Shop</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#account">MyAccount</a></li>
+                <li><a href="#contact">Contact Us</a></li>
+                <li><a href="#account">My Account</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="about">
         <h2>Site Purpose</h2>
-        <p>Sunday Prince Global Access provides high-quality Indian Georges, Sarees, laces, and other fashion fabrics.
+        <p>Ladybird Global Collections provides high-quality Indian Georges, Sarees, laces, and other fashion fabrics.
             Customers can shop, get styling inspiration, and explore our latest collections.</p>
     </section>
 
@@ -43,7 +43,7 @@
         <h2>Scenarios</h2>
         <ul>
             <li>Where can I find premium laces and luxury fabric sets?</li>
-            <li>How can I contact Sunday Prince Global Access for bulk purchases?</li>
+            <li>How can I contact Ladybird Global Collections for bulk purchases?</li>
         </ul>
     </section>
 
@@ -129,10 +129,10 @@
 
     <section id="contact">
         <h2>Contact Us</h2>
-        <p>Address: Ikot Asurua, Ikot Ekpene, Akwa Ibom, Nigeria </p>
-        <p>Call: <a href="tel:+2348059454897">+2348059454897</a></p>
-        <p>Whatsapp: <a href="https://wa.me/2349129193069">+2349129193069</a></p>
-        <p>Email: <a href="mailto:birdiesglobalcollection@gmail.com">sundayprinceglobalaccess@gmail.com</a></p>
+        <p>Address: MPK18 up, zone 8, Ekeoha shopping center, Aba</p>
+        <p>Call: <a href="tel:+2348136895421">+2348136895421</a></p>
+        <p>Whatsapp: <a href="https://wa.me/2349051192355">+2349051192355</a></p>
+        <p>Email: <a href="mailto:birdiesglobalcollection@gmail.com">birdiesglobalcollection@gmail.com</a></p>
     </section>
 
     <section id="account">
@@ -150,15 +150,15 @@
         </form>
     </section>
     <div class="hero">
-        <img src="images/Sunday_Prince_global_home_page_mobile_view.webp" alt="mockup" width="500" height="785">
+        <img src="../images/ladybird global home page mobile view-.webp" alt="mockup" width="500" height="785">
 
-        <img src="images/Sunday_Prince_global_home_page.webp" alt="Sunday Prince Global Access Site Mockup" width="500"
+        <img src="../images/ladybird_global_home_page.webp" alt="Ladybird Global Collections Site Mockup" width="500"
             height="706">
     </div>
 
     <footer>
-        <p>&copy; <span id="currentyear"></span> 2025 - Sunday Prince Global Access ! @
-            Ikot Asurua, Shopping Base, Ikot Ekpene, Akwa Ibom, Nigeria</p>
+        <p>&copy; <span id="currentyear"></span> 2025 - Ladybird Global Collections ! @
+            Zone 8, Ekeoha Shopping Center Aba, Abia State</p>
         <p id="lastModified">Last Modification: <span></span></p>
         <a href="wireframe.png">wireframe</a>
         <div class="social">
