"Update SitePlan Page"

--- a/week05/project/siteplan.html
+++ b/week05/project/siteplan.html
@@ -157,8 +157,8 @@
     </div>
 
     <footer>
-        <p>&copy; <span id="currentyear"></span> 2025 - Sunday Prince Global Access ! @
-            No-152 Ikot Asurua, Shopping center, Ikot Ekpene, Akwa Ibom State</p>
+        <p>&copy; <span id="currentyear"></span>2025 - Sunday Prince Global Access @
+        Ikot Asurua, Shopping center, Ikot Ekpene, Akwa Ibom State</p>
         <p id="lastModified">Last Modification: <span></span></p>
         <a href="wireframe.png">wireframe</a>
         <div class="social">
