--- a/week05/project/siteplan.html
+++ b/week05/project/siteplan.html
@@ -20,7 +20,7 @@
 
 <body>
     <header>
-        <img src="images/Logo.png" alt="Sunday Prince Global Access Logo">
+        <img src="images/Logo.jpg" alt="Sunday Prince Global Access Logo">
         <button id="menu-toggle" aria-label="Toggle Menu">☰</button>
         <nav>
             <ul class="nav-menu">
@@ -132,7 +132,7 @@
         <p>Address: No-152 Ikot Asurua, Shopping center, Ikot Ekpene</p>
         <p>Call: <a href="tel:+2348059454897">+2348059454897</a></p>
         <p>Whatsapp: <a href="https://wa.me/2349129193069">+2349129193069</a></p>
-        <p>Email: <a href="mailto:birdiesglobalcollection@gmail.com">birdiesglobalcollection@gmail.com</a></p>
+        <p>Email: <a href="sundayprinceglobalaccess@gmail.com">birdiesglobalcollection@gmail.com</a></p>
     </section>
 
     <section id="account">
@@ -150,9 +150,9 @@
         </form>
     </section>
     <div class="hero">
-        <img src="images/Sunday_Prince_global_home_page_mobile_view.webp" alt="mockup" width="500" height="785">
+        <img src="images/Sunday_Prince_Global Access_Home_Page_Mobile_View.webp" alt="mockup" width="500" height="785">
 
-        <img src="images/Sunday_Prince_global_home_page.webp" alt="Sunday Prince Global Access Site Mockup" width="500"
+        <img src="images/Sunday_Prince_Global Access_Home_Page_View.webp" alt="Sunday Prince Global Access Site Mockup" width="500"
             height="706">
     </div>
 
