"Update Site Plan Contact Email"

--- a/week05/project/siteplan.html
+++ b/week05/project/siteplan.html
@@ -132,7 +132,7 @@
         <p>Address: No-152 Ikot Asurua, Shopping center, Ikot Ekpene</p>
         <p>Call: <a href="tel:+2348059454897">+2348059454897</a></p>
         <p>Whatsapp: <a href="https://wa.me/2349129193069">+2349129193069</a></p>
-        <p>Email: <a href="sundayprinceglobalaccess@gmail.com">birdiesglobalcollection@gmail.com</a></p>
+        <p>Email: <a href="sundayprinceglobalaccess@gmail.com">sundayprinceglobalaccess@gmail.com</a></p>
     </section>
 
     <section id="account">
