"Update Global Access Home Page"

--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -134,7 +134,7 @@
   </main>
 
   <footer>
-    <p>&copy;<span id="currentyear"></span> - SP Web & Software Solution - Nigeria! Sunday Prince Augustine @Brigham Young University - Idaho</p>
+    <p>&copy;<span id="currentyear"></span> - 2025 Sunday Prince Global Access. All rights reserved @ Brigham Young University- Idaho</p>
     <p class="lastM">Last Modification: <span id="lastModified"></span></p>
   </footer>
 
