--- a/Week06/contact.html
+++ b/Week06/contact.html
@@ -18,10 +18,10 @@
     </div>
     <nav>
       <ul>
-        <li><a href="/index.html">Home</a></li>
+        <li><a href="https://austine77.github.io/wdd131/Week06/index.html">Home</a></li>
         <li><a href="/index.html">Shop</a></li>
         <li><a href="index.html#about">About</a></li>
-        <li><a href="/contact.html" class="active">Contact</a></li>
+        <li><a href="https://austine77.github.io/wdd131/Week06/contact.html" class="active">Contact</a></li>
       </ul>
     </nav>
   </header>
