--- a/Week06/index.html
+++ b/Week06/index.html
@@ -25,10 +25,10 @@
     </div>
     <nav>
       <ul>
-        <li><a href="/index.html">Home</a></li>
+        <li><a href="https://austine77.github.io/wdd131/Week06/index.html">Home</a></li>
         <li><a href="#shop">Shop</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="/contact.html">Contact</a></li>
+        <li><a href="https://austine77.github.io/wdd131/Week06/contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
