"Update Contact Page "

--- a/Week06/contact.html
+++ b/Week06/contact.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Contact the Sunday Prince Global Access team for inquiries and bookings.">
   <meta name="author" content="Sunday Prince Augustine">
-  <title>Contact Us - Sunday Prince Global Access</title>
+  <title>Contact Us - Sunday Prince Global Access Contact Page</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -14,7 +14,7 @@
   <header>
     <div class="header-left">
       <img src="SiteLogo.jpg" alt="Site Logo" class="logo" loading="lazy" />
-      <h1>Sunday Prince Global Access</h1>
+      <h1>Sunday Prince Global Access Contact Page</h1>
     </div>
     <nav>
       <ul>
