"Update Week 06 Products Page"

--- a/Week06/index.html
+++ b/Week06/index.html
@@ -65,7 +65,71 @@
           <p>From #25,000.99</p>
         </div>
       </div>
+      <div class="product-card">
+        <img src="4.jpg" alt="Women's Outfit">
+        <div class="info">
+          <h4>Bridal Wedding Dress Straight Shoulders And Lace Bridesmaid Dress</h4>
+          <p>From #19,500.99</p>
+        </div>
+      </div>
+      <div class="product-card">
+        <img src="5.jpg" alt="Women's Outfit">
+        <div class="info">
+          <h4>2024 Wedding Dresses Sexy Lace Split Evening Dress Long Skirt Bridesmaid Dress Prom Dress New Evening Gown Elegant Wedding Dress</h4>
+          <p>From #31,500.99</p>
+        </div>
+      </div>
+      <div class="product-card">
+        <img src="6.jpg" alt="Women's Outfit">
+        <div class="info">
+          <h4>Green-Boat Neck Hip Wrap Fishtail Hem Bridesmaid Dress Elegant Crochet Lace Patchwork Perspective</h4>
+          <p>From #28,500.99</p>
+        </div>
+      </div>
+      <div class="product-card">
+        <img src="7.jpg" alt="Men's Outfit">
+        <div class="info">
+          <h4>Couples Bathrobe - White</h4>
+          <p>From #49,500.99</p>
+        </div>
+      </div>
+      <div class="product-card">
+        <img src="8.jpg" alt="Men's Outfit">
+        <div class="info">
+          <h4>Couple Cotton Bathrobe - (Blue/White)</h4>
+          <p>From #22,500.99</p>
+        </div>
+      </div>
+      <div class="product-card">
+        <img src="9.jpg" alt="Women's Outfit">
+        <div class="info">
+          <h4>Dinner Gown For Ladies Women Office Skirt Casual Turkey Wears Dressr</h4>
+          <p>From #23,500.99</p>
+        </div>
+      </div>
+      <div class="product-card">
+        <img src="10.jpg" alt="Men's Outfit">
+        <div class="info">
+          <h4>Man And Woman Long Bathrope With Footwear 2 In 1</h4>
+          <p>From #18,500.99</p>
+        </div>
+      </div>
+      <div class="product-card">
+        <img src="11.jpg" alt="Men's Outfit">
+        <div class="info">
+          <h4>Exceutive Body Fited Men's Suit Black</h4>
+          <p>From #26,500.99</p>
+        </div>
+      </div>
+      <div class="product-card">
+        <img src="12.jpg" alt="Men's Outfit">
+        <div class="info">
+          <h4>Executive Men's Slim Fit Suit - Golden Brown</h4>
+          <p>From #41,500.99</p>
+        </div>
+      </div>
     </div>
+    
   </section>
 
   <footer>
