"Update Form Page"

--- a/form.html
+++ b/form.html
@@ -83,7 +83,7 @@
             <fieldset>
                 <legend>User Info</legend>
                 <label for="username">Your Name (optional):</label>
-                <input type="text" id="username" name="username" placeholder="Sunday Prince">
+                <input type="text" id="username" name="username" placeholder="Ladybird">
             </fieldset>
 
             <!-- Submit -->
@@ -92,8 +92,8 @@
     </main>
 
     <footer>
-        <p>&copy; <span id="currentyear"></span> 2025 - Sunday Prince Global Access</p>
-        <p>No-152 Ikot Asurua, Shopping center, Ikot Ekpene, Akwa Ibom State</p>
+        <p>&copy; <span id="currentyear"></span> 2025 - Sunday Prince Global Access @
+            Ikot Asurua, Shopping center, Ikot Ekpene, Akwa Ibom State</p>
         <p>Last Modified: <span id="lastModified"></span></p>
     </footer>
 
