--- a/Week06/index.html
+++ b/Week06/index.html
@@ -26,7 +26,7 @@
     <nav>
       <ul>
         <li><a href="https://austine77.github.io/wdd131/Week06/index.html">Home</a></li>
-        <li><a href="https://austine77.github.io/wdd131/Week06/index.html">Shop</a></li>
+        <li><a href="https://austine77.github.io/wdd131/Week06/index-shop.html">Shop</a></li>
         <li><a href="https://austine77.github.io/wdd131/Week06/about.html">About</a></li>
         <li><a href="https://austine77.github.io/wdd131/Week06/contact.html">Contact</a></li>
       </ul>
