"Update Week 06 JS"

--- a/Week06/index-shop.html
+++ b/Week06/index-shop.html
@@ -33,12 +33,11 @@
     </nav>
   </header>
 
-  <section class="hero">
-    <div class="hero-content">
-      <h2>Contact Us</h2>
-      <p>Contact Sunday Prince Global Access.</p>
-      <button onclick="https://austine77.github.io/wdd131/Week06/contact.html">Contact Us Now</button>
-    </div>
+  <section class="hero">  
+    <div class="hero-content">  
+      <h2>Best Fashion Market Everyone</h2>  
+      <p>Sunday Prince Global Access.</p>    
+    </div>  
   </section>
 
   <section class="products" id="shop">
@@ -147,7 +146,7 @@
 <script>
   // JavaScript function to link the Shop Now button to the main page
   function shopNow() {
-    window.location.href = "index-shop.html"; // Redirect to main page (index.html)
+    window.location.href = "https://austine77.github.io/wdd131/Week06/index-shop.html"; // Redirect to main page (index.html)
   }
 </script>
 </body>
