--- a/Week06/index.html
+++ b/Week06/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Shop the best collection at Sunday Prince Global Access." />
   <meta name="author" content="Sunday Prince Augustine" />
-  <title>Sunday Prince Global Access - Shop</title>
+  <title>Sunday Prince Global Access - Home Page</title>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -21,7 +21,7 @@
   <header>
     <div class="header-left">
       <img src="SiteLogo.jpg" alt="Site Logo" class="logo" loading="lazy" />
-      <h1>Sunday Prince Global Access</h1>
+      <h1>Sunday Prince Global Access Home Page</h1>
     </div>
     <nav>
       <ul>
@@ -33,13 +33,13 @@
     </nav>
   </header>
 
-  <section class="hero">
-    <div class="hero-content">
-      <h2>Stylish Fashion For Everyone</h2>
-      <p>Discover the best clothing collections at Sunday Prince Global Access.</p>
-      <button onclick="https://austine77.github.io/wdd131/Week06/index-shop.html">Shop Now</button>
-    </div>
-  </section>
+  <section class="hero">  
+    <div class="hero-content">  
+      <h2>Stylish Fashion For Everyone</h2>  
+      <p>Discover the best clothing collections at Sunday Prince Global Access.</p>  
+      <button onclick="shopNow()">Shop Now</button>  
+    </div>  
+  </section>  
 
   <section class="site" id="page">
     <h3>Shop Main Page</h3>
@@ -67,7 +67,7 @@
   <script>
     // JavaScript function to link the Shop Now button to the main page
     function shopNow() {
-      window.location.href = "index.html"; // Redirect to main page (index.html)
+      window.location.href = "https://austine77.github.io/wdd131/Week06/index-shop.html"; // Redirect to main page (index.html)
     }
   </script>
 </body>
