--- a/Week06/about.html
+++ b/Week06/about.html
@@ -83,7 +83,7 @@
   <script>
     // JavaScript function to link the Shop Now button to the main page
     function shopNow() {
-      window.location.href = "about.html"; // Redirect to main page (index.html)
+      window.location.href = "https://austine77.github.io/wdd131/Week06/index-shop.html"; // Redirect to main page (index.html)
     }
   </script>
 </body>
