--- a/Week06/contact.html
+++ b/Week06/contact.html
@@ -71,7 +71,7 @@
 <script>
   // JavaScript function to link the Shop Now button to the main page
   function shopNow() {
-    window.location.href = "contact.html"; // Redirect to main page (index.html)
+    window.location.href = "https://austine77.github.io/wdd131/Week06/index-shop.html"; // Redirect to main page (index.html)
   }
 </script>
 </body>
