--- a/Week06/index-shop.html
+++ b/Week06/index-shop.html
@@ -143,12 +143,7 @@
             <img src="instagram.svg" alt="instagram"></a>
 </footer>
 
-<script>
-  // JavaScript function to link the Shop Now button to the main page
-  function shopNow() {
-    window.location.href = "https://austine77.github.io/wdd131/Week06/index-shop.html"; // Redirect to main page (index.html)
-  }
-</script>
+<script src="script.js"></script>
 </body>
 
 </html>
