--- a/Week06/about.html
+++ b/Week06/about.html
@@ -80,12 +80,7 @@
     </div>
   </footer>
 
-  <script>
-    // JavaScript function to link the Shop Now button to the main page
-    function shopNow() {
-      window.location.href = "https://austine77.github.io/wdd131/Week06/index-shop.html"; // Redirect to main page (index.html)
-    }
-  </script>
+  <script src="script.js"></script>
 </body>
 
 </html>
