"Update Shop Page"

--- a/Week06/index-shop.html
+++ b/Week06/index-shop.html
@@ -35,7 +35,7 @@
 
   <section class="hero">  
     <div class="hero-content">  
-      <h2>Best Fashion Market Everyone</h2>  
+      <h2>Best Fashion Market For Everyone Around The World</h2>  
       <p>Sunday Prince Global Access.</p>    
     </div>  
   </section>
